# viral

./: README.md  SECURITY.md  com.github.ranguli.Viral.json  meson.build  viral.doap
.flatpak-builder/cache/refs/heads/x86_64-com.github.ranguli.Viral.json/: build-blueprint-compiler  init
.flatpak-builder/checksums/: x86_64-com.github.ranguli.Viral.json
.flatpak-builder/git/https_gitlab.gnome.org_jwestman_blueprint-compiler/: FETCH_HEAD
.flatpak-builder/git/https_gitlab.gnome.org_jwestman_blueprint-compiler/objects/pack/: pack-4fdcf473e200f37f04428a5116447ec426dd29ea.idx  pack-4fdcf473e200f37f04428a5116447ec426dd29ea.pack  pack-4fdcf473e200f37f04428a5116447ec426dd29ea.rev
.flatpak-builder/git/https_gitlab.gnome.org_jwestman_blueprint-compiler/refs/merge-requests/99/: head
data/: com.github.ranguli.Viral.desktop  com.github.ranguli.Viral.metainfo.xml  meson.build
data/icons/: meson.build
po/: POTFILES  README.md  com.github.ranguli.Viral.pot  meson.build
src/: README.md  corrupt.c  corrupt.h  main.c  meson.build  viral-application.c  viral-application.h  viral-file-row.blp  viral-file-row.c  viral-file-row.h  viral-progress-icon.c  viral-progress-icon.h  viral-progress-info-popover.blp  viral-progress-info-popover.c  viral-progress-info-popover.h  viral-window.blp  viral-window.c  viral-window.h  viral.gresource.xml
